package model;

public enum AmphoraColor{
    /**
     * Enum Class with all acceptable colors for an AmphoraTile.
     */
    BLUE, BROWN, RED, GREEN, YELLOW, PURPLE;
}
