package model;

public enum CharacterColor {
    /**
     * Enum class for all available character colors.
     */
    YELLOW, RED, BLUE, BLACK;
}
