package model;

public class LandslideTile extends Tile{
    /**
     * LandslideTile Constructor, takes no parameters
     * @post Initialize isLandslideTile Tile attribute with True.
     */
    public LandslideTile() {
        this.Type = "LandslideTile";
        this.tile_name = "landslide";
    }

}
