package model;

public enum MosaicColor {
    /**
     * Enum Class with all acceptable colors for a MosaicTile.
     */
    GREEN, RED, YELLOW
}
